fix: fix rest-icon z-index

--- a/src/styles/components/_icons.scss
+++ b/src/styles/components/_icons.scss
@@ -20,7 +20,7 @@
 }
 
 .rest-icon {
-  z-index: 20;
+  z-index: 9;
   right: 0;
 
   background-color: $button-color-additional;
